--- a/ManyWords/Resources/AppResources.resx
+++ b/ManyWords/Resources/AppResources.resx
@@ -177,6 +177,9 @@
   <data name="SpellingCheck_Hint" xml:space="preserve">
     <value>Enter translation for the word above</value>
   </data>
+  <data name="TrainingView_NewButton" xml:space="preserve">
+    <value>new training</value>
+  </data>
   <data name="TrainingView_Progress" xml:space="preserve">
     <value>Loading words...</value>
   </data>
